# SpeakIt--Specch-To-Text-App

./: .gitignore  README.md  index.html  main.js  package.json  pnpm-lock.yaml  preload.js
assets/: app.icns
transcriber/: pyproject.toml  run.py
